- Updated LICENSE and README files

--- a/README
+++ b/README
@@ -5,7 +5,9 @@
 TBD
 
 ## Installation
-TBD
+Installation is very basic, just clone this repository into any directory:
+
+	git clone 
 
 ## License
 TBD
